--- a/FrontEndProject/navbar/navbar.html
+++ b/FrontEndProject/navbar/navbar.html
@@ -13,7 +13,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Меню</a>
+                    <a class="nav-link active" href="/WebFront-Hits-frontend-project-2/FrontEndProject/menu/menu.html">Меню</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="#">Заказы</a>
@@ -23,10 +23,10 @@
                 </li>
             </ul>
             <div class="nav-item my-sm-0 right">
-                <a class="nav-link active" href="/FrontEndProject/registration/registration.html">Регистрация</a>
+                <a class="nav-link active" href="/WebFront-Hits-frontend-project-2/FrontEndProject/registration/registration.html">Регистрация</a>
             </div>
             <div class="nav-item my-sm-0 right">
-                <a class="nav-link active" href="/FrontEndProject/login/login.html">Вход</a>
+                <a class="nav-link active" href="/WebFront-Hits-frontend-project-2/FrontEndProject/login/login.html">Вход</a>
             </div>
         </div>
 
