--- a/FrontEndProject/registration/registration.html
+++ b/FrontEndProject/registration/registration.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/FrontEndProject/navbar/navbar.css">
-    <link rel="stylesheet" type="text/css" href="/FrontEndProject/footer/footer.css">
+    <link rel="stylesheet" type="text/css" href="/WebFront-Hits-frontend-project-2/FrontEndProject/navbar/navbar.css">
+    <link rel="stylesheet" type="text/css" href="/WebFront-Hits-frontend-project-2/FrontEndProject/footer/footer.css">
     <link rel="stylesheet" type="text/css" href="registration.css">
     <script type="text/javascript" src="registration.js"></script>
     <script>
         $(function(){
-            $("#header").load("/FrontEndProject/navbar/navbar.html");
+            $("#header").load("/WebFront-Hits-frontend-project-2/FrontEndProject/navbar/navbar.html");
         });
     </script>
 
     <script>
         $(function(){
-            $("#footer").load("/FrontEndProject/footer/footer.html");
+            $("#footer").load("/WebFront-Hits-frontend-project-2/FrontEndProject/footer/footer.html");
         });
     </script>
 </head>
@@ -50,7 +50,7 @@
     <div>Пароль</div>
     <input class="data-field" type="password" name="name" required="required">
 
-    <button class="register-button"> Зарегистрироваться</button>
+    <button class="register-button button"> Зарегистрироваться</button>
 </div>
 <div class="flexspace"></div>
 <div id="footer"></div>
