--- a/FrontEndProject/login/login.html
+++ b/FrontEndProject/login/login.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/FrontEndProject/navbar/navbar.css">
-    <link rel="stylesheet" type="text/css" href="/FrontEndProject/footer/footer.css">
-    <link rel="stylesheet" type="text/css" href="/FrontEndProject/registration/registration.css">
+    <link rel="stylesheet" type="text/css" href="/WebFront-Hits-frontend-project-2/FrontEndProject/navbar/navbar.css">
+    <link rel="stylesheet" type="text/css" href="/WebFront-Hits-frontend-project-2/FrontEndProject/footer/footer.css">
+    <link rel="stylesheet" type="text/css" href="/WebFront-Hits-frontend-project-2/FrontEndProject/registration/registration.css">
     <script type="text/javascript" src="login.js"></script>
     <script>
         $(function(){
-            $("#header").load("/FrontEndProject/navbar/navbar.html");
+            $("#header").load("/WebFront-Hits-frontend-project-2/FrontEndProject/navbar/navbar.html");
         });
     </script>
 
     <script>
         $(function(){
-            $("#footer").load("/FrontEndProject/footer/footer.html");
+            $("#footer").load("/WebFront-Hits-frontend-project-2/FrontEndProject/footer/footer.html");
         });
     </script>
 </head>
@@ -26,7 +26,7 @@
     <input class="data-field" type="text" name="name" required="required">
     <div>Пароль</div>
     <input class="data-field" type="password" name="name" required="required">
-    <button class="login-button"> Войти</button>
+    <button class="login-button button"> Войти</button>
 </div>
 <div class="flexspace"></div>
 <div id="footer"></div>
