--- a/FrontEndProject/public/html/menu.html
+++ b/FrontEndProject/public/html/menu.html
@@ -81,7 +81,7 @@
     <div aria-label="Page navigation">
         <ul class="pagination">
             <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
+                <a class="page-link" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
                 </a>
             </li>
