--- a/FrontEndProject/public/html/navbar.html
+++ b/FrontEndProject/public/html/navbar.html
@@ -6,7 +6,7 @@
 </head>
 <nav class="navbar navbar-expand-lg navbar-custom">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Delivery.Кушац</a>
+        <a class="navbar-brand" href="http://localhost:3000/">Delivery.Кушац</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
             <span class="navbar-toggler-icon"></span>
         </button>
