item page completed

--- a/FrontEndProject/public/html/menu.html
+++ b/FrontEndProject/public/html/menu.html
@@ -70,6 +70,7 @@
         <div class="category-name">Категория блюда - </div>
         <div class="star-rating">text</div>
         <div class="dish-text">text</div>
+        <div class="dish-id" style="display:none"></div>
         <div class="flexspace"></div>
         <div class="dish-footer row ">
             <div class="dish-cost col-8 align-text-bottom">Цена - </div>
