--- a/FrontEndProject/public/html/menu.html
+++ b/FrontEndProject/public/html/menu.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="/js/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/css/navbar.css">
-    <link rel="stylesheet" type="text/css" href="/css/footer.css">
     <link rel="stylesheet" type="text/css" href="/css/registration.css">
     <link rel="stylesheet" type="text/css" href="/css/menu.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script type="text/javascript" src="js/menu.js"></script>
-
+    <script type="module"  src="js/navbar.js"></script>
 
 </head>
 <body>
