--- a/FrontEndProject/public/html/navbar.html
+++ b/FrontEndProject/public/html/navbar.html
@@ -1,8 +1,10 @@
 ﻿
 <head>
     <link rel="stylesheet" type="text/css" href="/css/navbar.css" />
+    <script type="module"  src="js/navbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
 </head>
 <nav class="navbar navbar-expand-lg navbar-custom">
     <div class="container-fluid">
@@ -22,10 +24,10 @@
                     <a class="nav-link active" href="#">Корзина</a>
                 </li>
             </ul>
-            <div class="nav-item my-sm-0 right">
+            <div class="nav-item my-sm-0 right optional">
                 <a class="nav-link active" href="http://localhost:3000/register">Регистрация</a>
             </div>
-            <div class="nav-item my-sm-0 right">
+            <div class="nav-item my-sm-0 right optional">
                 <a class="nav-link active" href="http://localhost:3000/login">Вход</a>
             </div>
         </div>
